# min_native_client

./: CMakeLists.txt  Dockerfile  README.md  generate_certs.sh  server.crt  server.key
src/: base64.cpp  base64.hpp  local_ws_server.cpp  local_ws_server.hpp  lua_host.cpp  lua_host.hpp  main.cpp  orchestrator_client.cpp  orchestrator_client.hpp  server_client.cpp  server_client.cpp.txt  server_client.hpp  thread_pool.hpp  websocket_client.cpp  websocket_client.cpp.txt  websocket_client.hpp  websocket_client.hpp.txt  websocket_client_plain.cpp  websocket_client_variant.cpp
src/executors/: binary_executor.cpp  binary_executor.hpp  cuda_executor.cpp  cuda_executor.hpp  iexecutor.hpp  kernel_cache.hpp  opencl_executor.cpp  opencl_executor.hpp  vulkan_executor.cpp  vulkan_executor.hpp
